src/test/contracts/negative/missing_rpar.religo
type foo = big_map(int, int);

let test_case = (n: int, m: foo): foo => Big_map.update(23, Some(n), m

let z = 4;